--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^9.1.2",
     "react-router": "^6.23.0",
     "react-router-dom": "^6.23.0",
+    "react-select": "^5.8.0",
     "redux": "^5.0.1"
   },
   "devDependencies": {
